Fix spacing style

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,10 @@
 	padding: 0;
 }
 
+body {
+	background: antiquewhite;
+}
+
 .App {
 	font-family: sans-serif;
 	text-align: center;
